--- a/Travel-Company.WPF/MVVM/View/MainWindow.xaml
+++ b/Travel-Company.WPF/MVVM/View/MainWindow.xaml
@@ -8,7 +8,7 @@
         d:DataContext="{d:DesignInstance Type=viewmodel:MainViewModel}"
         mc:Ignorable="d"
         Title="MainWindow" 
-        Height="450" 
+        Height="505" 
         Width="800"
         WindowStyle="None"
         WindowStartupLocation="CenterScreen"
@@ -16,7 +16,7 @@
         ResizeMode="CanResizeWithGrip"
         AllowsTransparency="True"
         TextElement.FontFamily="/Resources/Fonts/#Inter"
-        MinHeight="470"
+        MinHeight="505"
         MinWidth="660">
     
     <Window.Resources>
@@ -40,6 +40,9 @@
         </Geometry>
         <Geometry x:Key="GeoPlace">
             M15 15.26V13H11L15 9H12L15 6H13L16 3L19 6H17L20 9H17L21 13H17V15.76C19.13 16.47 20.68 17.67 21 19C19.3 18.87 17.62 18.54 16 18C14.79 18.61 13.37 19 12 19C10.71 19 9.17 18.58 8 18C6.37 18.54 4.72 18.87 3 19C3.54 16.77 7.4 15 12 15C13.05 15 14.06 15.09 15 15.26M8 19C8 19 5 20 2 20V22C5 22 8 21 8 21C8 21 10 22 12 22C14 22 16 21 16 21C16 21 19 22 22 22V20C19 20 16 19 16 19C16 19 14 20 12 20C10 20 8 19 8 19Z
+        </Geometry>
+        <Geometry x:Key="GeoCountries">
+            M6,3A1,1 0 0,1 7,4V4.88C8.06,4.44 9.5,4 11,4C14,4 14,6 16,6C19,6 20,4 20,4V12C20,12 19,14 16,14C13,14 13,12 11,12C8,12 7,14 7,14V21H5V4A1,1 0 0,1 6,3Z
         </Geometry>
     </Window.Resources>
     
@@ -109,7 +112,7 @@
                              ToolTip="Employees"
                              Template="{StaticResource MainMenuRadioButton}"
                              Command="{Binding Path=NavigateToEmployeesCommand}"
-                             IsChecked="True"
+                             IsChecked="False"
                              Margin="2">
                     <RadioButton.Content>
                         <StackPanel Orientation="Horizontal">
@@ -203,6 +206,25 @@
                 <!-- Header -->
                 <TextBlock Text="Catalogs"
                            Style="{StaticResource MainMenuHeader}" />
+                <!-- Countries -->
+                <RadioButton x:Name="ButtonsCountries"
+                             GroupName="MainMenu"
+                             ToolTip="Countries"
+                             Template="{StaticResource MainMenuRadioButton}"
+                             IsChecked="False"
+                             Margin="2">
+                    <RadioButton.Content>
+                        <StackPanel Orientation="Horizontal">
+                            <Path Fill="{StaticResource Primary4Brush}"
+                                  Data="{StaticResource GeoCountries}"
+                                  Width="24"
+                                  Height="24" />
+                            <TextBlock Text="Countries"
+                                       Style="{StaticResource MainMenuTitle}" />
+                        </StackPanel>
+                    </RadioButton.Content>
+                </RadioButton>
+                
                 <!-- Streets -->
                 <RadioButton x:Name="ButtonsStreets"
                              GroupName="MainMenu"
