--- a/Travel-Company.WPF/MVVM/View/Employees/EmployeesView.xaml
+++ b/Travel-Company.WPF/MVVM/View/Employees/EmployeesView.xaml
@@ -6,6 +6,7 @@
              xmlns:local="clr-namespace:Travel_Company.WPF.MVVM.View.Employees"
              xmlns:employees="clr-namespace:Travel_Company.WPF.MVVM.ViewModel.Employees"
              d:DataContext="{d:DesignInstance Type=employees:EmployeesViewModel}"
+             xmlns:component="clr-namespace:Travel_Company.WPF.Resources.Components"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
 
@@ -32,22 +33,7 @@
         <!-- Search Bar -->
         <Grid Grid.Row="1"
               Margin="5">
-            <TextBox x:Name="SearchBarComponent"
-                     BorderBrush="Transparent"
-                     VerticalContentAlignment="Center"
-                     FontSize="14" />
-            <TextBlock x:Name="SearchBarPlaceholder"
-                       VerticalAlignment="Center"
-                       Margin="12"
-                       Foreground="{StaticResource Grey5Brush}"
-                       IsHitTestVisible="False"
-                       FontSize="14" />
-            <Path Data="{StaticResource GeoMagnifiedSearch}"
-                  Stroke="{StaticResource Grey5Brush}"
-                  StrokeThickness="1"
-                  HorizontalAlignment="Right"
-                  VerticalAlignment="Center"
-                  Margin="10" />
+            <component:SearchBar />
         </Grid>
 
         <ScrollViewer Grid.Row="2"
