--- a/Travel-Company.WPF/Resources/Styles/Styles.xaml
+++ b/Travel-Company.WPF/Resources/Styles/Styles.xaml
@@ -125,6 +125,8 @@
                 Value="14" />
         <Setter Property="Margin"
                 Value="0 0 0 4" />
+        <Setter Property="FontFamily"
+                Value="/Resources/Fonts/#Roboto" />
         <Setter Property="Foreground"
                 Value="{StaticResource Grey4Brush}" />
     </Style>
@@ -328,6 +330,21 @@
                 <Setter Property="ScrollViewer.CanContentScroll"
                         Value="false" />
             </MultiTrigger>
+
+            <DataTrigger Binding="{Binding HasItems, RelativeSource={RelativeSource Self}}"
+                         Value="false">
+                <Setter Property="Template">
+                    <Setter.Value>
+                        <ControlTemplate TargetType="DataGrid">
+                            <TextBlock Text="No data found" 
+                                       FontSize="16"
+                                       Margin="20"
+                                       VerticalAlignment="Stretch" 
+                                       HorizontalAlignment="Center"/>
+                        </ControlTemplate>
+                    </Setter.Value>
+                </Setter>
+            </DataTrigger>
         </Style.Triggers>
     </Style>
     <Style x:Key="DataGridCellStyle1"
